code/dotnet/CompanyLogoAPIforDigitalPortals/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Company Logo API for Digital Portals client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.CompanyLogoAPIforDigitalPortals)](https://www.nuget.org/packages/FactSet.SDK.CompanyLogoAPIforDigitalPortals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 0.9.4
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.CompanyLogoAPIforDigitalPortals
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.CompanyLogoAPIforDigitalPortals
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp

using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.CompanyLogoAPIforDigitalPortals.Api;
using FactSet.SDK.CompanyLogoAPIforDigitalPortals.Client;
using FactSet.SDK.CompanyLogoAPIforDigitalPortals.Model;

namespace Example
{
    public static class GetCompanyLogoGetByInstrumentExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.CompanyLogoAPIforDigitalPortals.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new CompanyApi(config);
            var id = "id_example";  // string | Identifier of an instrument.
            var attributes = new List<string>(); // List<string> | Limit the attributes returned in the response to the specified set. (optional) 

            try
            {
                // URLs of company logos.
                InlineResponse200 result = apiInstance.GetCompanyLogoGetByInstrument(id, attributes);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling CompanyApi.GetCompanyLogoGetByInstrument: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}

```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CompanyApi* | [**GetCompanyLogoGetByInstrument**](docs/CompanyApi.md#getcompanylogogetbyinstrument) | **GET** /company/logo/getByInstrument | URLs of company logos.


## Documentation for Models

 - [Model.CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [Model.CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.ErrorMetaObject](docs/ErrorMetaObject.md)
 - [Model.InlineResponse200](docs/InlineResponse200.md)
 - [Model.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [Model.InlineResponse200DataLarge](docs/InlineResponse200DataLarge.md)
 - [Model.InlineResponse200DataMedium](docs/InlineResponse200DataMedium.md)
 - [Model.InlineResponse200DataSmall](docs/InlineResponse200DataSmall.md)
 - [Model.InlineResponse200DataVector](docs/InlineResponse200DataVector.md)
 - [Model.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [Model.OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [Model.OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.PartialOutputObject](docs/PartialOutputObject.md)
 - [Model.StatusObject](docs/StatusObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
