code/dotnet/CompanyLogoAPIforDigitalPortals/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Company Logo API for Digital Portals client library for .NET

[![API Version](https://img.shields.io/badge/api-v2-blue)]()
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.CompanyLogoAPIforDigitalPortals)](https://www.nuget.org/packages/FactSet.SDK.CompanyLogoAPIforDigitalPortals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet-collected company logos through an API that seamlessly integrates with company fundamentals and estimates data (listed equities data available via the stocks API), quotes, time series, and other Functional APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- SDK version: 0.10.11
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.CompanyLogoAPIforDigitalPortals -v 0.10.11
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.CompanyLogoAPIforDigitalPortals -Version 0.10.11
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.CompanyLogoAPIforDigitalPortals.Api;
using FactSet.SDK.CompanyLogoAPIforDigitalPortals.Client;
using FactSet.SDK.CompanyLogoAPIforDigitalPortals.Model;

namespace Example
{
    public static class GetCompanyLogoGetExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.CompanyLogoAPIforDigitalPortals.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new CompanyApi(config);
            var identifier = "identifier_example";  // string | Identifier that resolves to a company. 
            var identifierType = "idInstrument";  // string | The type of the identifier.
            var format = "rectangular";  // string | Format of the logos. (optional)  (default to rectangular)
            var attributes = new List<string>(); // List<string> | Limit the attributes returned in the response to the specified set. (optional) 

            try
            {
                // List of URLs of company logos.
                InlineResponse200 result = apiInstance.GetCompanyLogoGet(identifier, identifierType, format, attributes);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling CompanyApi.GetCompanyLogoGet: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CompanyApi* | [**GetCompanyLogoGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/CompanyApi.md#getcompanylogoget) | **GET** /company/logo/get | List of URLs of company logos.


## Documentation for Models

 - [Model.CursorBasedPaginationOutputObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/CursorBasedPaginationOutputObject.md)
 - [Model.CursorBasedPaginationOutputObjectWithoutTotal](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.ErrorMetaObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/ErrorMetaObject.md)
 - [Model.InlineResponse200](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/InlineResponse200.md)
 - [Model.InlineResponse200Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/InlineResponse200Data.md)
 - [Model.InlineResponse200DataLarge](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/InlineResponse200DataLarge.md)
 - [Model.InlineResponse200DataMedium](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/InlineResponse200DataMedium.md)
 - [Model.InlineResponse200DataSmall](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/InlineResponse200DataSmall.md)
 - [Model.InlineResponse200DataVector](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/InlineResponse200DataVector.md)
 - [Model.InlineResponse200Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/InlineResponse200Meta.md)
 - [Model.OffsetBasedPaginationOutputObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/OffsetBasedPaginationOutputObject.md)
 - [Model.OffsetBasedPaginationOutputObjectWithoutTotal](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.PartialOutputObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/PartialOutputObject.md)
 - [Model.StatusObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/CompanyLogoAPIforDigitalPortals/v3/docs/StatusObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
